Closed Bug 1337778 Opened 7 years ago Closed 7 years ago

Widevine plugin crashes when opening Amazon videos in background tabs

Categories

(Core :: Audio/Video: GMP, defect, P1)

54 Branch
defect

Tracking

()

VERIFIED FIXED
mozilla54
Iteration:
54.3 - Mar 6
Tracking Status
firefox51 --- unaffected
firefox52 --- unaffected
firefox53 --- unaffected
firefox54 --- verified

People

(Reporter: sbadau, Assigned: cpearce)

References

Details

(Keywords: regression, Whiteboard: [e10s-multi:+])

Crash Data

Attachments

(3 files)

Attached video WidevineCrash.mp4
[Affected versions]:
- Nightly 54.0a1

[Affected platforms]:
- Windows 10 x64, Mac OS X 10.11

[Steps to reproduce]:
1. Launch Firefox
2. Log into your Amazon account
3. Departments -> Amazon Video -> Al Videos
4. Open multiple amazon videos in the background
5. After the Play Tab indicator is displayed in the right side of the tab, focus one of the tabs with the video

[Expected result]:
- After step 5 - amazon video should start to play

[Actual result]:
- After step 5 - "The WidevineCdm plugin has crashed." bar is displayed.
https://crash-stats.mozilla.com/report/index/18794381-ee68-40b2-b751-98fbb2170208
Also, please see the screen cast for more details.

[Regression range]:
Last good revision: 13b48d5e00f4b98718f2a16cac1b2ae2bc7c00c1
First bad revision: aefa445b9c775c92a31f7f21f4abf07b6a7e2caf
Pushlog:
https://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=13b48d5e00f4b98718f2a16cac1b2ae2bc7c00c1&tochange=aefa445b9c775c92a31f7f21f4abf07b6a7e2caf

Looks like the following bug has the changes which introduced the regression:
https://bugzilla.mozilla.org/show_bug.cgi?id=1303113

[Additional notes]:
- I could not reproduce the issue on Ubuntu 16.04. (Widevine plugin is not installed)
- The issue is reproducible when opening more than 1 video (at least 2).
- Not all the amazon videos are crashing all the time. I've seen situations when only 2 tabs from a total of 3  had crashed.
- The issue is not reproducible if e10s is disabled.
Summary: Widevine plugin crashes when opening the amazon videos in background tabs → Widevine plugin crashes when opening Amazon videos in background tabs
Whiteboard: [e10s-multi:?]
Widevine plugin is crashing regardless if the preference "media.block-autoplay-until-in-foreground" is set to true or false - under this circumstances, I'm removing this bug from the dependencies of Bug 1308154.
No longer blocks: delay-autoplay
Whiteboard: [e10s-multi:?] → [e10s-multi:+]
Hi, are you aware of an conceptual issues with GMP child processes in a multiple content processes setup? Also, could you give me some hints how to reproduce this crash easily locally without having an Amazon account so I can debug this crash a bit more to see what's going on? (trailers are not DRM protected so I could not use them to reproduce the crash)
Component: Audio/Video: Playback → Audio/Video: GMP
Flags: needinfo?(cpearce)
Rank: 10
Priority: -- → P1
Assignee: nobody → cpearce
Flags: needinfo?(cpearce)
This might be related and it's super easy to reproduce: https://bugzilla.mozilla.org/show_bug.cgi?id=1337728#c1
There's been a spike of these recently, e.g. it's the #12 Windows topcrash in Nightly 20170224030232.
(In reply to Gabor Krizsanits [:krizsa :gabor] from comment #2)
> Hi, are you aware of an conceptual issues with GMP child processes in a
> multiple content processes setup?

I've not tested it recently, but I think it should work fine. I considered this scenario with all the design decisions I made, so it Should Work.

> Also, could you give me some hints how to
> reproduce this crash easily locally without having an Amazon account so I
> can debug this crash a bit more to see what's going on? (trailers are not
> DRM protected so I could not use them to reproduce the crash)

I expect two same origin pages both using Widevine would do it; as I expect is happening in bug 1337728.
Flags: needinfo?(cpearce)
Simpler STR:

1. Open https://people-mozilla.org/~cpearce/mse-clearkey/ in new tab.
2. Open https://people-mozilla.org/~cpearce/mse-clearkey/ an another new tab.
3. Observe CDM crash.
Flags: needinfo?(cpearce)
Simona: Can you please test this build on Amazon and see if you can still reproduce the problem? It should be ready in a few hours. Thanks.
https://treeherder.mozilla.org/#/jobs?repo=try&revision=35326db656b43242c0c7965507f577181829b40e
Flags: needinfo?(simona.marcu)
Attached image VideoUnavailable.png
(In reply to Chris Pearce (:cpearce) from comment #9)
> Simona: Sorry, I messed up the above push, please can you instead test:
> https://treeherder.mozilla.org/#/
> jobs?repo=try&revision=172efcfb3b50e4e2d827befa8e4e2988347a95a3

Chris: On the provided build I'm experiencing an error saying: "Video Unavailable" (even when opening the video in the current tab). Sometimes 1 out of 3 opened amazon videos is running but the other shows the mentioned error.
Flags: needinfo?(simona.marcu)
I can repro on Amazon, and the patch here fixes the issue for me.
Comment on attachment 8842708 [details]
Bug 1337778 - Use counter for decryptor ID instead of IPDL actor Id.

https://reviewboard.mozilla.org/r/116474/#review118104
Attachment #8842708 - Flags: review?(gsquelart) → review+
Pushed by cpearce@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/6fb5321bf52c
Use counter for decryptor ID instead of IPDL actor Id. r=gerald
(In reply to Chris Pearce (:cpearce) from comment #11)
> OK, thanks. Can you please try this build:
> https://treeherder.mozilla.org/#/
> jobs?repo=try&revision=8f14148c38ce875a470abb9096a28b63506c0376&selectedJob=8
> 0983492

I can no longer reproduce the crash using this build. 
Tested on Windows 10 x64.
Flags: needinfo?(simona.marcu)
https://hg.mozilla.org/mozilla-central/rev/6fb5321bf52c
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla54
Iteration: --- → 54.3 - Mar 6
Verified as fixed using Nightly 54.0a1 (Build ID: 20170306080637) on Windows 10 x 64 and the latest Nightly 55.0a1 (Build ID: 20170307030205) on Windows 10 x 64 and Mac OS X 10.11.
Status: RESOLVED → VERIFIED
Can we reopen this? It is reappearing in 59.0.2 (32-bit)
You need to log in before you can comment on or make changes to this bug.