Bug 1337778 - Use counter for decryptor ID instead of IPDL actor Id. r=gerald

The work I did in bug 1306314 seems to have either regressed or never worked
properly for multiple CDM same origin processes. I'd guess the decryptor IPDL
protocol actor ID must not be as unique as I thought. So if we just use a
counter managed by the GMPDecrytorChild, we'll get a per CDM unique ID, which
is sufficient.

MozReview-Commit-ID: KSh72ptX5fn

--HG--
extra : rebase_source : 9dd558aa9b2e9154e70fc328009b79e1daa884b2